EventService - non cognitive complexity